# exa-ashby-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
app/: __init__.py  config.py  main.py
app/ashby/: __init__.py  client.py
app/db/: __init__.py  connection.py  models.py  repositories.py  schema.py
app/exa/: __init__.py  client.py  schemas.py  signature.py
app/routers/: admin_api.py  admin_ui.py  catch_up.py  exa_webhook.py
app/slack/: __init__.py  notify.py
app/static/: admin.html
app/sync/: __init__.py  enriched_item.py
scripts/: catch-up.sh  post-mapping.sh  railway-smoke.sh
tests/: conftest.py  test_admin_api.py  test_catch_up.py  test_db.py  test_exa_signature.py  test_exa_webhook.py  test_slack_notify.py  test_webhook_sync.py
