[project]
name = "exa-ashby-pipeline"
version = "0.1.0"
description = "Exa Websets → Ashby automated candidate pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1",
  "uvicorn[standard]>=0.32.0,<1",
  "httpx>=0.27.0,<1",
  "pydantic-settings>=2.6.0,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
